<resources>

    <string name="app_name">BooksStore</string>
    <string name="kitaplar">Kitaplar</string>
    <string name="sepet">Sepet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kulalnici_ayarlari">Kullanıcı Ayarları</string>
    <string name="kullanici_bilgileri">Kullanıcı Bilgileri</string>
    <string name="genel_ayarlar">Genel Ayarlar</string>
    <string name="light_dark">Light / Dark</string>
    <string name="hesaptan_cik">Hesaptan Çık</string>
    <string name="userimg">userImg</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="kullanici_soyadi">Kullanıcı Soyadı</string>
    <string name="kullanici_email">Kullanıcı e-mail</string>
    <string name="kaydet">KAYDET</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="hint_kitap_ismi">Kitap İsmi</string>
    <string name="hint_kitap_yazari">Kitap Yazarı</string>
    <string name="booksImg">booksImg</string>
    <string name="sepete_ekle">Sepete Ekle</string>
    <string name="kitap_fiyati">Kitap Fiyatı</string>
    <string name="add_the_book">Add the book</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="admin_email">admin_email</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Book Author</string>
    <string name="book_price">Book Price</string>
    <string name="select_image">Select Image</string>
    <string name="profile">Profil</string>
    <string name="arama_kriteri">Yazar Adı, Kitap Adı…</string>
    <string name="satin_al">Satın Al</string>
    <string name="kullanici_adres">Kullanıcı Adres</string>
    <string name="full_name">Full Name</string>
    <string name="hint_email">abc@example.com</string>
    <string name="user_pass">Şifre</string>
    <string name="again_user_pass">Tekrar Şifre</string>


    <string name="title_activity_splash">Splash</string>
    <string name="mail_adresiniz">Mail Adresi</string>
    <string name="sifre_hint">Şifre</string>
    <string name="book_store">Book Store</string>

</resources>
