<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.RegisterScreenFragment"
    android:background="@drawable/gradiyent_first">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_back_button_50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/material_on_background_disabled" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="35dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/kullanici_adi"
            android:background="@color/white"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:id="@+id/nameEditText"
            android:layout_marginBottom="35dp"/>
        <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/kullanici_soyadi"
            android:textAlignment="center"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:id="@+id/lastNameEditText"
            android:layout_marginBottom="35dp"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/kullanici_email"
            android:textAlignment="center"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:id="@+id/emailEditText"
            android:layout_marginBottom="35dp"/>
        <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/user_pass"
            android:background="@color/white"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:id="@+id/passwordEditText"
            android:layout_marginBottom="35dp"/>
        <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:hint="@string/again_user_pass"
            android:background="@color/white"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:id="@+id/confirmPasswordEditText"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradiyent_button"
            android:text="@string/kayit_ol"
            android:textColor="@color/white"
            android:layout_marginTop="35dp"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>